--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     <div id="game-container">
         <div id="title-screen">
             <div id="title-animation-container"></div>
-            <h1>Smooth Moves Sodoku</h1>
+            <h1>Smooth Moves Sudoku</h1>
             <div id="title-buttons">
                 <button class="control-btn" id="new-game-btn">New Game</button>
                 <button class="control-btn" id="daily-puzzle-btn">Daily Puzzle</button>
